--- a/acer-laptop.html
+++ b/acer-laptop.html
@@ -49,16 +49,12 @@
 
       <div class="product-box-laptop">
         <img src="/images/acer laptop/acerlaptop1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit
+        <h2>2022 Acer Nitro 5</h2>
+        <p> 15.6" FHD 144Hz Gaming Notebook, <br> Intel Core
+          i5-10300H Processor, NVIDIA GeForce GTX 1650, <br> WiFi 6, DTS X Ultra
+          Audio, Backlit Keyboard, <br> Win 10 Home (16GB RAM | 1TB SSD)
         </p>
-        <p>1500$</p>
+        <p>1800 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -68,15 +64,12 @@
 
       <div class="product-box-laptop">
         <img src="/images/acer laptop/acerlaptop2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Acer Nitro 5 AN517-54-79L1 Gaming Laptop</h2>
+        <p> | Intel Core i7-11800H | <br>
+          NVIDIA GeForce RTX 3050Ti Laptop GPU | <br> 17.3" FHD 144Hz IPS
+          Display |
+          16GB DDR4 | 1TB NVMe SSD | <br> Killer Wi-Fi 6 | Backlit KB | Win 11</p>
+        <p>2400 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -86,15 +79,14 @@
 
       <div class="product-box-laptop">
         <img src="/images/acer laptop/acerlaptop3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Acer Nitro 5 AN517-55-72R4 Gaming Laptop</h2>
+        <p> | Intel Core i7-12700H | <br>
+          NVIDIA GeForce RTX 3050 Ti Laptop GPU <br> | 17.3" FHD 144Hz IPS
+          Display
+          |
+          16GB DDR4 | 1TB PCIe Gen 4 SSD | <br> Killer Wi-Fi 6 | Red Backlit
+          KB</p>
+        <p>2560 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -104,15 +96,12 @@
 
       <div class="product-box-laptop">
         <img src="/images/acer laptop/acerlaptop4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Acer Nitro 5 AN515-46-R0EQ Gaming</h2>
+        <p> | AMD Ryzen 7 6800H <br>
+          Octa-Core CPU | NVIDIA GeForce RTX 3070 Ti Laptop GPU | <br> 15.6" QHD
+          FreeSync 165Hz IPS | 32GB DDR5 | <br> 1TB Gen 4 SSD | Wi-Fi 6E | RGB
+          Backlit</p>
+        <p>3400 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -122,15 +111,14 @@
 
       <div class="product-box-laptop">
         <img src="/images/acer laptop/acerlaptop5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Acer Nitro 5 AN517-41-R7EY Gaming </h2>
+        <p>AMD Ryzen 5 5600H
+          Hexa-Core
+          Processor | <br> NVIDIA GeForce GTX 1650 | <br> 17.3" FHD IPS Display
+          | 8GB
+          DDR4 <br>
+          | 512GB NVMe SSD | WiFi 6 | Backlit Keyboard</p>
+        <p>1820 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -140,15 +128,13 @@
 
       <div class="product-box-laptop">
         <img src="/images/acer laptop/acerlaptop6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Acer Predator Helios 300 PH315-54 PH315</h2>
+        <p> 15.6" Gaming Notebook- Full HD - 1920 x 1080 - <br> Intel Core i7
+          11th Gen i7-11800H Octa-core
+          (8 Core) <br> 2.40 GHz - 16 GB RAM - 1 TB SSD
+
+        </p>
+        <p>2400 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
