--- a/apple-laptop.html
+++ b/apple-laptop.html
@@ -49,16 +49,13 @@
 
       <div class="product-box-laptop">
         <img src="images/apple laptop/apple1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit
+        <h2>Apple 2020 MacBook Air Laptop</h2>
+        <p> M1 Chip, 13” Retina Display, 8GB RAM, <br>
+          256GB SSD Storage, Backlit Keyboard, <br> FaceTime HD Camera,
+          Touch ID.
+          Works with iPhone/iPad; <br>Space Gray
         </p>
-        <p>1500$</p>
+        <p>2000 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -68,15 +65,12 @@
 
       <div class="product-box-laptop">
         <img src="images/apple laptop/apple2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Apple 2022 MacBook Air Laptop </h2>
+        <p>with M2 chip: 13.6-inch Liquid Retina <br>
+          Display, 8GB RAM, 256GB SSD Storage, > Backlit Keyboard, <br>1080p
+          FaceTime
+          HD Camera. Works with iPhone and iPad; <br> Silver</p>
+        <p>2400 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -86,15 +80,10 @@
 
       <div class="product-box-laptop">
         <img src="images/apple laptop/apple3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Apple MacBook Pro </h2>
+        <p>M2 Chip (13-inch, 16GB RAM, <br> 256GB SSD Storage) - <br>
+          Space Gray (2022 Model) - <br> Z16R0005S</p>
+        <p>2800 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -104,15 +93,10 @@
 
       <div class="product-box-laptop">
         <img src="images/apple laptop/apple4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>2019 Apple MacBook Pro </h2>
+        <p>with 2.6GHz Intel Core i7 (15-inch, 16GB RAM, <br>
+          512GB SSD Storage) <br> Silver (Renewed)</p>
+        <p>2900 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -122,15 +106,10 @@
 
       <div class="product-box-laptop">
         <img src="images/apple laptop/apple5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Apple 2021 MacBook Pro</h2>
+        <p> (14-inch, M1 Pro chip with 8‑core CPU and <br>
+          14‑core GPU, 16GB RAM, 512GB SSD) - <br> Silver</p>
+        <p>3800 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -140,15 +119,10 @@
 
       <div class="product-box-laptop">
         <img src="images/apple laptop/apple6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Apple 2021 MacBook Pro</h2>
+        <p> (16-inch, M1 Pro chip with 10‑core CPU and <br>
+          16‑core GPU, 16GB RAM, 512GB SSD) - <br> Space Gray</p>
+        <p>3200 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
