--- a/asus-laptop.html
+++ b/asus-laptop.html
@@ -49,16 +49,12 @@
 
       <div class="product-box-laptop">
         <img src="/images/asus laptop/asuslaptop1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit
+        <h2>ASUS TUF Dash 15 (2022) Gaming Laptop</h2>
+        <p> 15.6" 144Hz FHD Display, Intel
+          Core i7-12650H, <br> GeForce RTX 3060, 16GB DDR5, 512GB SSD,
+          Thunderbolt 4, <br> Windows 11 Home, Off Black, FX517ZM-AS7
         </p>
-        <p>1500$</p>
+        <p>2560 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -68,15 +64,12 @@
 
       <div class="product-box-laptop">
         <img src="/images/asus laptop/asuslaptop2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>ASUS ROG Strix Scar 15 (2022) Gaming </h2>
+        <p> 15.6” 300Hz IPS FHD
+          Display, NVIDIA GeForce RTX 3070 Ti,<br> Intel Core i9 12900H, 16GB
+          DDR5,
+          1TB SSD, RGB Keyboard, <br> Windows 11 Home, G533ZW-AS94</p>
+        <p>3800 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -86,15 +79,12 @@
 
       <div class="product-box-laptop">
         <img src="/images/asus laptop/asuslaptop3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>ASUS ROG Strix Scar 15 (2021) Gaming</h2>
+        <p> 15.6” 300Hz IPS Type
+          FHD, NVIDIA GeForce RTX 3080, <br> AMD Ryzen 7 5800H, 16GB DDR4, 1TB
+          SSD,
+          Opti-Mechanical <br> RGB Keyboard, Windows 10, G533QS-DS76</p>
+        <p>4600 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -104,15 +94,12 @@
 
       <div class="product-box-laptop">
         <img src="/images/asus laptop/asuslaptop4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>ASUS ROG Strix Scar 15 Gaming Laptop</h2>
+        <p> 15.6" 300Hz IPS Type FHD
+          Display, NVIDIA GeForce RTX 3080, <br> AMD Ryzen 9 5900HX, 16GB DDR4,
+          1TB
+          SSD, Opti-Mechanical <br> RGB Keyboard, Windows 11, G533QS-DS94</p>
+        <p>3850 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -122,15 +109,12 @@
 
       <div class="product-box-laptop">
         <img src="/images/asus laptop/asuslaptop5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>ASUS TUF Gaming F17 Gaming Laptop</h2>
+        <p> 17.3" 144Hz FHD IPS-Type Display,
+          Intel Core i5-11400H Processor, <br> GeForce RTX 3050, 8GB DDR4 RAM,
+          512GB
+          PCIe SSD, Wi-Fi 6, <br> Windows 11 Home, FX706HCB-ES51</p>
+        <p>1800 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -140,15 +124,12 @@
 
       <div class="product-box-laptop">
         <img src="/images/asus laptop/asuslaptop6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>ASUS TUF A15 Gaming Laptop</h2>
+        <p> 15.6" FHD 144Hz Screen, AMD Ryzen 7
+          4800H, GeForce<br> RTX 3050 Ti, 32GB RAM, 1TB SSD, Webcam, RGB
+          Backlit<br>
+          Keyboard, Wi-Fi 6, Windows 11 Home, Black</p>
+        <p>2300 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
