--- a/cooler.html
+++ b/cooler.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/style-product.css">
+    <link rel="stylesheet" href="styles/style-product-cooler.css">
   </head>
   <body>
 
@@ -45,16 +45,19 @@
 
 
 
-    <div class="product-container">
+    <div class="product-container-cooler">
 
-      <div class="product-box">
+      <div class="product-box-cooler">
         <img src="images/cooler (2)/cooler1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>CORSAIR iCUE H150i ELITE LCD Display Liquid CPU Cooler-Custom IPS LCD
-          Screen-48 Dynamic RGB LEDs-120mm Fans-360mm Radiator-COMMANDER CORE
-          Smart Lighting Controller
+        <h2>CORSAIR iCUE H150i ELITE </h2>
+        <p>LCD Display Liquid CPU Cooler-Custom IPS LCD <br>
+          Screen-48 Dynamic RGB LEDs-120mm <br>Fans-360mm Radiator- <br>
+          COMMANDER
+          CORE Smart Lighting Controller
+
+
         </p>
-        <p>239</p>
+        <p>480 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -62,13 +65,15 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-cooler">
         <img src="images/cooler (2)/cooler2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>NZXT Kraken X53 240mm - RL-KRX53-01 - AIO RGB CPU Liquid Cooler -
-          Rotating Infinity Mirror Design - Improved Pump-Powered By CAM V4-RGB
-          Connector-Aer P 120mm Radiator Fans (2 Included), Black, X Gen 3</p>
-        <p>135</p>
+        <h2>NZXT Kraken X53 240mm </h2>
+        <p>- RL-KRX53-01 - AIO RGB CPU Liquid Cooler - <br>
+          Rotating Infinity Mirror Design - Improved Pump- <br> Powered By CAM
+          V4-RGB Connector-Aer P 120mm <br> Radiator Fans (2 Included), Black, X
+          Gen 3</p>
+
+        <p>270 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -76,13 +81,14 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-cooler">
         <img src="images/cooler (2)/cooler3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>CoolerMaster MasterLiquid ML240L RGB V2, Close-Loop AIO CPU Liquid
-          Cooler, Gen3 Dual Chamber Pump, 240mm Radiator, SickleFlow 120 PWM
-          ARGB, AMD Ryzen AM5/AM4, Intel LGA1700/1200 (MLW-D24M-A18PC-R2)</p>
-        <p>89</p>
+        <h2>CoolerMaster MasterLiquid ML240L RGB </h2>
+        <p> Close-Loop AIO CPU Liquid
+          Cooler, Gen3 Dual Chamber Pump,<br> 240mm Radiator, SickleFlow 120 PWM
+          <br>
+          ARGB, AMD Ryzen AM5/AM4, <br> Intel LGA1700/1200 (MLW-D24M-A18PC-R2)</p>
+        <p>180 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -90,14 +96,15 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-cooler">
         <img src="images/cooler (2)/cooler4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>ASUS ROG Ryujin II 240 ARGB All-in-one Liquid CPU Cooler 240mm
-          Radiator (3.5" Color LCD, Embedded Pump Fan, 2X ROG 120mm ARGB
-          Radiator Fans, Compatible with Intel LGA1700, 1200 and AM5, AM4
+        <h2>ASUS ROG Ryujin II 240 ARGB </h2>
+        <p>All-in-one Liquid CPU Cooler 240mm
+          Radiator (3.5" Color LCD, <br>Embedded Pump Fan, 2X ROG 120mm ARGB
+          <br>
+          Radiator Fans, Compatible with Intel LGA1700, 1200 and AM5, <br>AM4
           Socket)</p>
-        <p>219</p>
+        <p>440 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -105,13 +112,14 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-cooler">
         <img src="images/cooler (2)/cooler5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Jonsbo CR1400 RGB CPU Air Cooler, 4 Heat-Pipes, 126mm RGB CPU Fan,
-          Removable 92mm PWM Fans, Fins Bending, 4-pin RGB CPU Cooler, RGB
-          Lighting for AMD Ryzen/Intel LGA 1700 115X, Black</p>
-        <p>26</p>
+        <h2>Jonsbo CR1400 RGB</h2>
+        <p> CPU Air Cooler, 4 Heat-Pipes, 126mm RGB CPU Fan,
+          Removable<br> 92mm PWM Fans, Fins Bending, 4-pin RGB CPU Cooler, RGB
+          <br>
+          Lighting for AMD Ryzen/Intel <br> LGA 1700 115X, Black</p>
+        <p>52 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -119,13 +127,15 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-cooler">
         <img src="images/cooler (2)/cooler6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Cooler Master MasterFan MF120 Halo 3in1 Duo-Ring ARGB 3-Pin Fan, 24
-          Independently LEDS, 120mm PWM Static Pressure Fan, Absorbing Pads for
+        <h2>Cooler Master MasterFan</h2>
+        <p> MF120 Halo 3in1 Duo-Ring ARGB 3-Pin Fan, <br> 24
+          Independently LEDS,<br> 120mm PWM Static Pressure Fan, Absorbing Pads
+          for
+          <br>
           Computer Case & Liquid Radiator</p>
-        <p>64</p>
+        <p>130 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
