--- a/dell-laptop.html
+++ b/dell-laptop.html
@@ -49,16 +49,14 @@
 
       <div class="product-box-laptop">
         <img src="images/dell/dellaptop1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit
+        <h2>Dell G15</h2>
+        <p> 15.6" FHD 120Hz Gaming Laptop, AMD Ryzen7 5800H<br>(8-core, Up
+          to 4.4 GHz), NVIDIA GeForce RTX 3050 Ti, <br> 32GB 3200MHz RAM,
+          1TB PCIe SSD, Backlit Keyboard, HDMI, <br> WiFi 6, Win 11, Grey
+
+
         </p>
-        <p>1500$</p>
+        <p>1920 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -68,15 +66,13 @@
 
       <div class="product-box-laptop">
         <img src="images/dell/dellaptop2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>2021 Dell G5 15 Gaming Laptop</h2>
+        <p> 15.6" FHD 144Hz Display, Intel Core
+          i7-10750H, <br> NVIDIA GeForce RTX 2070 8GB GDDR6, <br> 16 GB DDR4
+          RAM,
+          512GB
+          PCIe SSD, Killer Wi-Fi, <br> RGB Backlit Keyboard, Windows 10, Black</p>
+        <p>2900 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -86,15 +82,12 @@
 
       <div class="product-box-laptop">
         <img src="images/dell/dellaptop3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Dell 2022 G15 </h2>
+        <p>15.6" 120Hz FHD Gaming Laptop 14-Core Intel i7-12700H
+          64GB <br>DDR5 2TB NVMe SSD NVIDIA GeForce RTX 3060 6GB GDDR6 <br>
+          Thunderbolt4
+          HDMI2.1 WiFi AX BT RJ-45 Backlit KB Webcam <br> Windows 11 Pro</p>
+        <p>4200 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -104,15 +97,13 @@
 
       <div class="product-box-laptop">
         <img src="images/dell/dellaptop4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Dell Alienware M15 R5 Gaming Laptop </h2>
+        <p>15.6" 360Hz FHD + IPS Display
+          (AMD Ryzen 9 5900HX 8-Core, <br> 16GB RAM, 1TB SSD, RTX 3070, <br>
+          Backlit
+          KYB,
+          WiFi 6, BT 5.1, HD Webcam, Win11H), <br> Dark Side of the Moon</p>
+        <p> 3400 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -122,15 +113,12 @@
 
       <div class="product-box-laptop">
         <img src="images/dell/dellaptop5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Dell G15 </h2>
+        <p>15.6 Inch FHD 120Hz LED Gaming Laptop | <br> AMD Ryzen 7 5800H
+          Processor | 32GB RAM | 1TB SSD | <br> NVIDIA GeForce RTX 3050 Ti |
+          Backlit
+          Keyboard | Wi-Fi 6 | <br> Windows 10 Home | Gray</p>
+        <p>1960 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -140,15 +128,12 @@
 
       <div class="product-box-laptop">
         <img src="images/dell/dellaptop6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Dell Inspiron Laptop (2022 Latest Model)</h2>
+        <p> 15.6" Full HD Touchscreen,
+          Intel Core i5-1135G7 Processor <br>(Beats i7-1065G7), Intel Iris Xe
+          Graphics, 16GB RAM, 1TB SDD, <br> Webcam, Wi-Fi, Bluetooth, <br>
+          Windows 11</p>
+        <p>1600 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
