--- a/externa memorija.html
+++ b/externa memorija.html
@@ -48,17 +48,12 @@
     <div class="product-container">
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen1.jpg" alt="">
+        <img src="images/eksterna memorija/e1.jpg" alt="">
         <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit
+        <p>Toshiba Canvio Basics 2TB Portable External Hard Drive USB 3.0, Black
+          - HDTB420XK3AA
         </p>
-        <p>1500$</p>
+        <p>59$</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -67,16 +62,11 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen2.jpg" alt="">
+        <img src="images/eksterna memorija/e2.jpg" alt="">
         <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <p>WD 5TB Elements Portable HDD, External Hard Drive, USB 3.0 for PC &
+          Mac, Plug and Play Ready - WDBU6Y0050BBK-WESN</p>
+        <p>100$</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -85,16 +75,11 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen3.jpg" alt="">
+        <img src="images/eksterna memorija/e3.jpg" alt="">
         <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <p>WD_BLACK 5TB P10 Game Drive - Portable External Hard Drive HDD,
+          Compatible with Playstation, Xbox, PC, & Mac - WDBA3A0050BBK-WESN</p>
+        <p>120$</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -103,16 +88,12 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen4.jpg" alt="">
+        <img src="images/eksterna memorija/e4.jpg" alt="">
         <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <p>USB Flash Drive, High-Speed Thumb Drive Waterproof Memory Stick Metal
+          USB Drive Data Storage with Keychain Design Pen Drive Jump Drive for
+          Data Backup and Transfer for PC/Laptop</p>
+        <p>30$</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -121,16 +102,10 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen5.jpg" alt="">
+        <img src="images/eksterna memorija/e5.jpg" alt="">
         <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <p>SanDisk 128GB Ultra Flair USB 3.0 Flash Drive - SDCZ73-128G-G46</p>
+        <p>15$</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -139,22 +114,127 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen1.jpg" alt="">
+        <img src="images/eksterna memorija/e6.jpg" alt="">
         <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <p>KEXIN Flash Drive 32 GB 5 Pack Thumb Drive 32GB USB Flash Drive
+          Memory Stick Flash Drives USB 2.0, 5 Multi-Color (Black, Blue, Green,
+          White, Red)</p>
+        <p>16$</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
         </div>
 
       </div>
+
+      <div class="product-box">
+        <img src="images/eksterna memorija/e7.jpg" alt="">
+        <h2>Product 1</h2>
+        <p>Amazon Basics microSDXC Memory Card with Full Size Adapter, A2, U3,
+          Read Speed up to 100 MB/s, 128 GB</p>
+        <p>12$</p>
+
+        <div class="opcije">
+          <a href="#">Buy it now</a>
+        </div>
+
+      </div>
+
+      <div class="product-box">
+        <img src="images/eksterna memorija/e8.jpg" alt="">
+        <h2>Product 1</h2>
+        <p>512GB Micro SD Card Class 10 High Speed Memory Card for Android
+          Smartphone, Cameras,Tablet and Drone（512GB</p>
+        <p>20$</p>
+
+        <div class="opcije">
+          <a href="#">Buy it now</a>
+        </div>
+
+      </div>
+
+      <div class="product-box">
+        <img src="images/eksterna memorija/e9.jpg" alt="">
+        <h2>Product 1</h2>
+        <p>SAMSUNG EVO Select Micro SD-Memory-Card + Adapter, 256GB microSDXC
+          130MB/s Full HD & 4K UHD, UHS-I, U3, A2, V30, Expanded Storage for
+          Android Smartphones, Tablets, Nintendo-Switch (MB-ME256KA/AM)</p>
+        <p>25$</p>
+
+        <div class="opcije">
+          <a href="#">Buy it now</a>
+        </div>
+
+      </div>
+
+      <div class="product-box">
+        <img src="images/eksterna memorija/e10.jpg" alt="">
+        <h2>Product 1</h2>
+        <p>Optical Quantum Blue AZO CD-R 700MB 52X Recordable Media Disc 100pk
+          Spindle OQCD52BLT-BX</p>
+        <p>20$</p>
+
+        <div class="opcije">
+          <a href="#">Buy it now</a>
+        </div>
+
+      </div>
+
+      <div class="product-box">
+        <img src="images/eksterna memorija/e11.jpg" alt="">
+        <h2>Product 1</h2>
+        <p>Verbatim DVD+R 4.7GB 16x AZO Recordable Media Disc - 100 Disc Spindle
+          (FFP) - 97459, Branded, 100pk Spindle FFP</p>
+        <p>25$</p>
+
+        <div class="opcije">
+          <a href="#">Buy it now</a>
+        </div>
+
+      </div>
+
+      <div class="product-box">
+        <img src="images/eksterna memorija/e12.jpg" alt="">
+        <h2>Product 1</h2>
+        <p>ORICO 3.5 Inch Hard Drive Case Protective Box with Anti-Static
+          ,Shockproof and Dustproof Function, Storage Case for HDD External Hard
+          Drive Case,Gray,5 Pack-PHP35</p>
+        <p>23$</p>
+
+        <div class="opcije">
+          <a href="#">Buy it now</a>
+        </div>
+
+      </div>
+
+      <div class="product-box">
+        <img src="images/eksterna memorija/e13.jpg" alt="">
+        <h2>Product 1</h2>
+        <p>Reletech 2.5" External Hard Drive Enclosure, SATA to USB 3.1
+          Tool-Free Clear for 2.5 Inch SSD & HDD 9.5mm 7mm External Hard Drive
+          Case Supports UASP SATA</p>
+        <p>10$</p>
+
+        <div class="opcije">
+          <a href="#">Buy it now</a>
+        </div>
+
+      </div>
+
+      <div class="product-box">
+        <img src="images/eksterna memorija/e14.jpg" alt="">
+        <h2>Product 1</h2>
+        <p>SABRENT USB 3.0 to SATA External Hard Drive Lay Flat Docking Station
+          for 2.5 or 3.5in HDD, SSD [Support UASP and 20TB] (EC-DFLT)</p>
+        <p>26$</p>
+
+        <div class="opcije">
+          <a href="#">Buy it now</a>
+        </div>
+
+      </div>
+
+
 
 
     </div>
