--- a/intel-pc.html
+++ b/intel-pc.html
@@ -50,16 +50,13 @@
 
       <div class="product-box">
         <img src="/images/intel pc/intel1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit
+        <h2>Skytech Blaze 3.0</h2>
+        <p> Intel Core i5 12400F 2.5 GHz, <br>
+          RTX 3060, 500GB SSD, 16G DDR4 3200, <br> 600W Gold PSU, <br> AC Wi-Fi,
+          Windows
+          10 Home 64-bit
         </p>
-        <p>1500$</p>
+        <p>2200 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -69,15 +66,12 @@
 
       <div class="product-box">
         <img src="/images/intel pc/intel2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Skytech Chronos Gaming PC </h2>
+        <p>Intel Core i7 12700K 3.6 GHz, <br>
+          NVIDIA RTX 3080, 1TB NVME SSD, <br> 32GB DDR5 RAM RGB, 850W Gold PSU,
+          360mm<br>
+          AIO, 11AC Wi-Fi, Windows 11 Home 64-bit</p>
+        <p>3000 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -87,15 +81,13 @@
 
       <div class="product-box">
         <img src="/images/intel pc/intell3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Skytech Gaming Archangel </h2>
+        <p> Intel Core-i5 10400F 2.9GHz, <br> GTX 1660 Super 6G, 500GB SSD,
+          16GB
+          DDR4 <br>3200MHz, RGB
+          Fans, Windows 10 Home 64-bit, <br> 802.11AC Wi-Fi, White</p>
+
+        <p>2400 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -105,15 +97,13 @@
 
       <div class="product-box">
         <img src="/images/intel pc/intel4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Skytech Chronos Gaming PC</h2>
+        <p>Intel Core i5 12600K 3.7 GHz, <br>
+          NVIDIA RTX 3080, 1TB NVME SSD, <br> 16GB DDR4 RAM 3200, <br> 850W Gold
+          PSU,
+          11
+          AC Wi-Fi, Windows 11 Home 64-bit</p>
+        <p>3600 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -123,15 +113,13 @@
 
       <div class="product-box">
         <img src="/images/intel pc/intel5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>SkyTech Chronos Mini Gaming</h2>
+        <p> Intel Core-i3 10100F 3.6GHz, <br> GTX 1650 4G, <br> 500GB SSD, 8G
+          3000,
+          RGB Fans, AC WiFi, <br>
+          Windows 10 Home 64-bit</p>
+
+        <p>1300 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -141,14 +129,12 @@
 
       <div class="product-box">
         <img src="/images/intel pc/intel6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
+        <h2>Skytech Shiva Gaming PC</h2>
+        <p> Intel Core i5 12600K 3.7 GHz, <br> RTX
+          3060 Ti, 1TB NVME SSD, <br> 32G DDR5 RGB, <br>
+          650W Gold PSU, AC Wi-Fi, Windows 10 Home 64-bit
+
+        </p>
         <p>1500$</p>
 
         <div class="opcije">
