--- a/lenovo-laptop.html
+++ b/lenovo-laptop.html
@@ -49,16 +49,14 @@
 
       <div class="product-box-laptop">
         <img src="images/lenovo laptop/lenovolaptop1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit
+        <h2>Lenovo IdeaPad Gaming 3 - 2022 </h2>
+        <p>Everyday Gaming Laptop - NVIDIA
+          GeForce RTX 3050 Graphics <br> - 15.6" FHD Display - 120 Hz - AMD
+          Ryzen 5
+          6600H <br> - 8GB DDR5 - 258GB SSD - <br> Win 11 - Free 3-month Xbox
+          GamePass
         </p>
-        <p>1500$</p>
+        <p>1800 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -68,15 +66,12 @@
 
       <div class="product-box-laptop">
         <img src="images/lenovo laptop/lenovolaptop2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Lenovo Legion 5 Gaming Laptop</h2>
+        <p> 15.6" FHD Display, AMD Ryzen 7 5800H, <br>
+          16GB RAM, 512GB Storage, <br> NVIDIA GeForce RTX 3050Ti, <br> Windows
+          10H,
+          Phantom Blue</p>
+        <p>2400 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -86,15 +81,12 @@
 
       <div class="product-box-laptop">
         <img src="images/lenovo laptop/lenovolaptop3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Lenovo - Legion 5 - Gaming Laptop -</h2>
+        <p> AMD Ryzen 5 5600H - 8GB DDR4 RAM <br>
+          - 512GB NVMe TLC SSD - <br> NVIDIA GeForce RTX 3060 Graphics - 15.6"
+          FHD
+          120 Hz - <br> Windows 11 Home - Phantom Blue</p>
+        <p>2400 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -104,15 +96,12 @@
 
       <div class="product-box-laptop">
         <img src="images/lenovo laptop/lenovolaptop4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Lenovo Legion 5</h2>
+        <p> 15.6" 165Hz FHD Gaming Laptop, AMD 8-Core Ryzen <br>
+          7-5800H,GeForce RTX 3070 8GB (TGP 130W), <br> USB-C,Win11 Home,with
+          HDMI <br>
+          Cable (32GB RAM | 1TB PCIe SSD)</p>
+        <p>3160 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -122,15 +111,11 @@
 
       <div class="product-box-laptop">
         <img src="images/lenovo laptop/lenovolaptop5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Lenovo IdeaPad 3i</h2>
+        <p> 15.6" FHD Gaming Laptop 2022, 11th Gen Intel <br>
+          i5-11300H(up to 4.4GHz), <br> 16GB RAM 1TB NVMe SSD, GeForce GTX 1650,
+          USB-A&C RJ45, <br> Windows 11</p>
+        <p>1650 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -140,15 +125,13 @@
 
       <div class="product-box-laptop">
         <img src="images/lenovo laptop/lenovolaptop6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <h2>Dell Inspiron Plus Laptop </h2>
+        <p>16" 3072 x 1920 Display - 11th Gen Intel
+          Core i7-11800H <br> - Intel Iris Xᵉ Graphics - <br> Win 10 Home - <br>
+          Blue
+          (16GB RAM
+          + 1TB SSD)</p>
+        <p>2400 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
