--- a/ryzen-pc.html
+++ b/ryzen-pc.html
@@ -50,15 +50,12 @@
       <div class="product-box">
         <img src="/images/ryzen pc/ryzen1.jpg" alt="">
         <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit
+        <p>AMD Ryzen 5 7600X 4.7 GHz, RTX 3060 Ti, <br> 1TB NVME SSD, 32G DDR5
+          RGB,
+          <BR>
+          600W Gold PSU, 240mm AIO, AC Wi-Fi, <br> Windows 11 Home 64-bit
         </p>
-        <p>1500$</p>
+        <p>3000 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -69,98 +66,83 @@
       <div class="product-box">
         <img src="/images/ryzen pc/ryzen2.jpg" alt="">
         <h2>Skytech Prism II Gaming PC</h2>
-        <p>Procesor: AMD Ryzen 9 5900x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+        <p> AMD Ryzen 9 5950X 3.4GHz, RTX
+          3090 24GB <br>GDDR6X, 32GB 3600 Trident Z Neo RGB,<br> 1TB Gen4 SSD,
+          1000W Gold, 360mm AIO, <br>AC WiFi, Windows 10 Home 64-bit
 
-        <div class="opcije">
-          <a href="#">Buy it now</a>
+
+          <p>5000 KM</p>
+
+          <div class="opcije">
+            <a href="#">Buy it now</a>
+          </div>
+
         </div>
 
-      </div>
+        <div class="product-box">
+          <img src="/images/ryzen pc/ryzen3.jpg" alt="">
+          <h2>ADMI | Gaming PC </h2>
+          <p> AMD Ryzen 5 3600 4.2GHz RTX 3060 <br>
+            12GB Desktop PC • 16GB 3200MHz • 240GB SSD <br> • 1TB Hard Drive •
+            600Mbps Wifi • <br> PC Gaming, Gaming Computer • Windows 10
+            <p>2400 KM</p>
 
-      <div class="product-box">
-        <img src="/images/ryzen pc/ryzen3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+            <div class="opcije">
+              <a href="#">Buy it now</a>
+            </div>
 
-        <div class="opcije">
-          <a href="#">Buy it now</a>
+          </div>
+
+          <div class="product-box">
+            <img src="/images/ryzen pc/ryzen4.jpg" alt="">
+            <h2>Skytech Chronos Gaming PC </h2>
+            <p>- AMD Ryzen 7 2700X, <br> NVIDIA RTX
+              2070 Super 8GB, <br> 16GB DDR4 (2x 8GB), <br> 1TB SSD, 650 Watt
+              Gold</p>
+            <p>3600 KM</p>
+
+            <div class="opcije">
+              <a href="#">Buy it now</a>
+            </div>
+
+          </div>
+
+          <div class="product-box">
+            <img src="/images/ryzen pc/ryzen5.jpg" alt="">
+            <h2>SkytechBlaze 3.0 Gaming</h2>
+            <p>AMD Ryzen 5 5600X 3.7 GHz, <br>
+              RTX 3060 Ti, 1TB NVME SSD, <br> 16G DDR4 3200, 600W Gold PSU, AC
+              Wi-Fi, <br> Windows 10 Home 64-bit</p>
+
+            <p>3580 KM</p>
+
+            <div class="opcije">
+              <a href="#">Buy it now</a>
+            </div>
+
+          </div>
+
+          <div class="product-box">
+            <img src="/images/ryzen pc/ryzen1.jpg" alt="">
+            <h2>Skytech Shadow 3.0 Gaming </h2>
+            <p>AMD Ryzen 7 3700X 3.6GHz, <br>
+              RTX 3060 Ti 8GB GDDR6, 16GB DDR4 3000, <br> 1TB NVME, B550
+              Motherboard,
+              600W Gold PSU, <br>AC WiFi, Windows 10 Home 64-bit</p>
+            <p>2700 KM</p>
+
+            <div class="opcije">
+              <a href="#">Buy it now</a>
+            </div>
+
+          </div>
+
+
+
+
+
         </div>
 
-      </div>
-
-      <div class="product-box">
-        <img src="/images/ryzen pc/ryzen4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
-
-        <div class="opcije">
-          <a href="#">Buy it now</a>
-        </div>
-
-      </div>
-
-      <div class="product-box">
-        <img src="/images/ryzen pc/ryzen5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
-
-        <div class="opcije">
-          <a href="#">Buy it now</a>
-        </div>
-
-      </div>
-
-      <div class="product-box">
-        <img src="/images/ryzen pc/ryzen1.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
-
-        <div class="opcije">
-          <a href="#">Buy it now</a>
-        </div>
-
-      </div>
-
-
-
-
-
-    </div>
 
 
 
@@ -178,47 +160,45 @@
 
 
 
+        <footer>
+          <div class="footer-content">
+            <div class="social">
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-youtube"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+            </div>
+            <ul class="list">
+              <li>
+                <a href="#">GamingPC</a>
+              </li>
 
-    <footer>
-      <div class="footer-content">
-        <div class="social">
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-        </div>
-        <ul class="list">
-          <li>
-            <a href="#">GamingPC</a>
-          </li>
+              <li>
+                <a href="#">Laptopi</a>
+              </li>
 
-          <li>
-            <a href="#">Laptopi</a>
-          </li>
+              <li>
+                <a href="#">Monitori</a>
+              </li>
 
-          <li>
-            <a href="#">Monitori</a>
-          </li>
+              <li>
+                <a href="#">Komponente</a>
+              </li>
 
-          <li>
-            <a href="#">Komponente</a>
-          </li>
+              <li>
+                <a href="#">Periferije</a>
+              </li>
 
-          <li>
-            <a href="#">Periferije</a>
-          </li>
-
-          <li>
-            <a href="#">Konzole</a>
-          </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
-        </ul>
-        <p class="copyright">copyright© 2022 Ahmed</p>
-      </div>
-    </footer>
-
+              <li>
+                <a href="#">Konzole</a>
+              </li>
+              <li>
+                <a href="#">Kontakt</a>
+              </li>
+            </ul>
+            <p class="copyright">copyright© 2022 Ahmed</p>
+          </div>
+        </footer>
 
 
 
@@ -228,5 +208,6 @@
 
 
 
-  </body>
-</html>
+
+      </body>
+    </html>
